<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="fr.enac.smartdring.fragments.profiles.ParamProfile">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           android:layout_gravity="center"
            android:text="@string/profile_name"
            android:textSize="20dp" /-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/profileIcone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
           android:id="@+id/profileName"
           android:layout_gravity="center"
           android:maxLines="1"
           android:maxLength="25"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:hint="@string/enter_name"/>
            </LinearLayout>


        <!-- Volume Sonnerie -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:text="@string/audio_ring"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_action_ring_volume"
                android:layout_marginRight="10dp"
            />
                <SeekBar
                    android:id="@+id/audioRingValue"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    />
        </LinearLayout>
        <!-- Fin -->

        <!-- Volume Notification -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:text="@string/audio_notification"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_action_chat"
                android:layout_marginRight="10dp"
                />
            <SeekBar
                android:id="@+id/audioNotificationValue"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
        <!-- Fin -->

        <!-- Volume Système -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:text="@string/audio_system"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_action_phone"
                android:layout_marginRight="10dp"
                />
            <SeekBar
                android:id="@+id/audioSystemValue"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
        <!-- Fin -->

        <!-- Volume Musique -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:text="@string/audio_musique"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_action_video"
                android:layout_marginRight="10dp"
                />
            <SeekBar
                android:id="@+id/audioMusiqueValue"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
        <!-- Fin -->

        <!-- Volume Alarme -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:text="@string/audio_alarme"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_action_alarms"
                android:layout_marginRight="10dp"
                />
            <SeekBar
                android:id="@+id/audioAlarmeValue"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
        <!-- Fin -->

    </LinearLayout>


</ScrollView>
