<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="fr.enac.smartdring.fragments.regles.ParamRegle">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rule_name"
            android:textSize="20dp" /-->
        <EditText
            android:id="@+id/ruleName"
            android:layout_gravity="center"
            android:maxLines="1"
            android:maxLength="25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_rule"/>

        <!-- Type de règle -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:text="@string/rule_type"
            android:textSize="20dp" />

           <Spinner
               android:id="@+id/spinner_rule_type"
               android:layout_gravity="center"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"/>
        <!-- Fin -->

        <!-- Condition d'activation de la règle -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:text="@string/rule_cond"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:textColor="#777777"
                android:id="@+id/rule_cond_indication"/>
            <Button
                android:id="@+id/map_button"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:text="Carte Google Map"/>
            <RadioGroup
                android:id="@+id/map_radio"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/radio_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Si entrée en zone"/>
            <RadioButton
                android:id="@+id/radio_out"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Si sortie de zone"/>
            </RadioGroup>
            <CheckBox
                android:id="@+id/check_phone_ring_condition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Seulement si le téléphone sonne."/>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:orientation="vertical"
                 android:layout_gravity="center"
                 android:layout_weight="0.5"
                 android:layout_height="wrap_content">
                 <TextView
                     android:id="@+id/afficheDate"
                     android:textSize="20dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
                 <Button
                     android:id="@+id/selectDate"
                     android:text="Règler date"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
                 </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/afficheTime"
                        android:textSize="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <Button
                        android:id="@+id/selectTime"
                        android:text="Règler heure"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
             </LinearLayout>
        </LinearLayout>
        <!-- Fin -->

        <!-- Profil à appliquer à l'activation de la règle -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:text="@string/rule_profile"
            android:textSize="20dp" />

            <Spinner
                android:id="@+id/spinner_rule_profile"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <!-- Fin -->

    </LinearLayout>


</ScrollView>